<resources>
    <string name="app_name">AppNobel</string>

    <string name="QuizNobel">Quiz Nobel</string>
    <string name="Comecar">JOGAR</string>
    <string name="Inst">Instruções</string>
    <string name="Estat">Estatísticas</string>
    <string name="Cred">Créditos</string>

    <string name="Pergunta1">Qual o nome da lenda no ícone do jogo?</string>
    <string name="Resposta1">Teros</string>
    <string name="Resposta2">Bödvar</string>
    <string name="Resposta3">Azoth</string>
    <string name="Resposta4">Björn</string>
    <string name="Tempo">Tempo:</string>
    <string name="Cronometro">00</string>
    <string name="N1.10">1/10</string>
    <string name="Dica">Dica</string>
    <string name="DicaDesc">Se trata de um personagem Viking.</string>


    <string name="QuePena">Que Pena!</string>
    <string name="Errou">Resposta errada...</string>

    <string name="Parabens">Parabéns!</string>
    <string name="Ganhou">Você venceu!</string>
    <string name="Menu">Voltar ao Menu</string>

    <string name="PartidasJogadas">Partidas Jogadas</string>
    <string name="PartidasGanhas">Partidas Ganhas</string>
    <string name="QuestoesCorretas">Questoes Corretas</string>
    <string name="QuestoesErradas">Questoes Erradas</string>
    <string name="Percentual">Percentual de Vitórias</string>

    <string name="InstruTexto">O Nobel Quiz são 15 perguntas, podendo errar 3. Lembre-se de que nem sempre as respostas são alternativas.</string>
    <string name="Continuar">Continuar</string>
    <string name="BomJogo">Bom Jogo!</string>

    <string name="Desenhos">Desenhos:</string>
    <string name="Criacao">Criação:</string>
    <string name="ProdGeral">Produção Geral:</string>
    <string name="Obrigado">Agradecimentos Especiais:</string>
    <string name="Patrocinio">Patrocinio:</string>
    <string name="Wesley">Wesley Spiandorim</string>
    <string name="Thiago">Thiago Galvão</string>
    <string name="WesleyANDThiago">Wesley Spiandorim e Thiago Galvão</string>
    <string name="LeandroANDThiago">Thiago Galvão e Leandro Antônio</string>

    <string name="endereco">"Endereço: %1$s  \n \n Horário: %4$tr"</string>
    <string name="loading">Carregando…</string>
    <string name="parar_busca">PARAR BUSCA</string>
    <string name="iniciar_busca">INICIAR</string>
    <string name="hint">Clique no botão para iniciar</string>
    <string name="permissao_recusada">Permissão negada, autorize a aplicação </string>
    <string name="sem_localizacao">Localização Indisponível</string>
    <string name="sem_endereco">Endereço indisponível</string>
    <string name="coordenada_invalida">Coordenadas inválidas</string>
    <string name="servico_indisponivel">Esse serviço está indisponível</string>

</resources>