<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#E9C07B"
    tools:context=".WinActivity">

    <!--Cards menu-->

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="565dp"
        android:layout_height="874dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backgroundvictory" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConteinerCards"
        android:layout_width="364dp"
        android:layout_height="460dp"
        android:background="@drawable/caixaquiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295">

        <Button
            android:id="@+id/btnR1"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginTop="90dp"
            android:backgroundTint="#FF5C00"
            android:fontFamily="@font/lato_bold"
            android:text="@string/Menu"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:textStyle="normal"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/Errou"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/QuePena"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="288dp"
        android:layout_height="491dp"
        android:layout_marginTop="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:srcCompat="@drawable/podium" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="230dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:srcCompat="@drawable/bodvarvictory" />

</androidx.constraintlayout.widget.ConstraintLayout>